feat: update packing strategy and service methods for improved parcel handling